--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -33,93 +33,13 @@
         <li><code>flex-wrap</code>: Controls whether flex items wrap onto multiple lines (nowrap, wrap, wrap-reverse).</li>
     </ul>
 
-    
-
-    <div class="flex-container">
-        <div class="flex-direction">
-            <div class="row">
-                <div>1</div>
-                <div>2</div>
-                <div>3</div>
-                <div>4</div>
-            </div>
-            <div class="row-reverse">
-                <div>1</div>
-                <div>2</div>
-                <div>3</div>
-                <div>4</div>
-            </div>
-            <div class="column">
-                <div>1</div>
-                <div>2</div>
-                <div>3</div>
-                <div>4</div>
-            </div>
-            <div class="column-reverse">
-                <div>1</div>
-                <div>2</div>
-                <div>3</div>
-                <div>4</div>
-            </div>
-        </div>
-        <div class="justify-content">
-            <div>
-                <div>1</div>
-                <div>2</div>
-                <div>3</div>
-                <div>4</div>
-            </div>
-            <div class="flex-start">
-                <div>1</div>
-                <div>2</div>
-                <div>3</div>
-                <div>4</div>
-            </div>
-            <div class="flex-end">
-                <div>1</div>
-                <div>2</div>
-                <div>3</div>
-                <div>4</div>
-            </div>
-            <div class="center">
-                <div>1</div>
-                <div>2</div>
-                <div>3</div>
-                <div>4</div>
-            </div>
-            <div class="space-between">
-                <div>1</div>
-                <div>2</div>
-                <div>3</div>
-                <div>4</div>
-            </div>
-            <div class="space-around">
-                <div>1</div>
-                <div>2</div>
-                <div>3</div>
-                <div>4</div>
-            </div>
-        </div>
-        <div class="align-items">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-            <div>4</div>
-            <div>5</div>
-        </div>
-        <div class="align-content">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-            <div>4</div>
-            <div>5</div>
-        </div>
-        <div class="flex-wrap">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-        </div>
-    </div>
+    <h4>Flex-direciton</h4>
+    <p>The <code>flex-direction</code> property defines the direction in which the flex items are placed in the flex container. It can take the following values:</p>
+    <ul>
+        <li><code>row</code>: Items are placed in a row, from left to right.</li>
+        <li><code>row-reverse</code>: Items are placed in a row, from right to left.</li>
+        <li><code>column</code>: Items are placed in a column, from top to bottom.</li>
+        <li><code>column-reverse</code>: Items are placed in a column, from bottom to top.</li>
 
     <h3>For Flex Items:</h3>
     <ul>
